# pioneer_ii

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/data/config/: settings.json  version.json
assets/level/ABANDONED_PASSAGE_01/: meta.json
assets/level/BASE_LAB_01_old/: imgui.ini  meta.json  tile.json
assets/level/BASE_LIVING_01/: meta.json
assets/level/BREAKABLE_MANIA/: tile.json
assets/level/BREAKABLE_TEST_01/: imgui.ini  inspectables.json  meta.json  tile.json
assets/level/COLLISION_TEST/: meta.json
assets/level/FIRSTWIND_ARENA_01/: meta.json
assets/level/FIRSTWIND_ATRIUM_01/: meta.json
assets/level/FIRSTWIND_CLOSET_03/: meta.json
assets/level/FIRSTWIND_CORRIDOR_01/: meta.json
assets/level/FIRSTWIND_CORRIDOR_02/: meta.json
assets/level/FIRSTWIND_DECK_01/: imgui.ini  inspectables.json  meta.json
assets/level/FIRSTWIND_DECK_02/: imgui.ini  meta.json
assets/level/FIRSTWIND_FALL_01/: meta.json
assets/level/FIRSTWIND_INFIRMARY_01/: imgui.ini  meta.json
assets/level/FIRSTWIND_LAB_01/: imgui.ini  inspectables.json  meta.json
assets/level/ty/: meta.json
demo/: CMakeLists.txt  demo.cpp
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/automa/: Demo.cpp  Editor.cpp  Editor.hpp  GameState.cpp  GameState.hpp  PopupHandler.cpp  PopupHandler.hpp  StateManager.cpp  StateManager.hpp
src/canvas/: Background.cpp  Background.hpp  Canvas.cpp  Canvas.hpp  Clipboard.cpp  Clipboard.hpp  EntitySet.cpp  EntitySet.hpp  Grid.cpp  Grid.hpp  Layer.cpp  Layer.hpp  Metagrid.cpp  Metagrid.hpp  Tile.cpp  Tile.hpp
src/gui/: Console.cpp  Console.hpp
src/setup/: Application.cpp  Application.hpp  ResourceFinder.hpp  WindowManager.cpp  WindowManager.hpp
src/tool/: Brush.cpp  EntityPlacer.cpp  Erase.cpp  Eyedropper.cpp  Fill.cpp  Hand.cpp  SelectionRectangular.cpp  Tool.cpp  Tool.hpp
src/util/: Camera.cpp  Camera.hpp  Lookup.hpp  PhysicsComponent.hpp  Service.hpp  ServiceLocator.hpp
(+148 files in other folders)
